--- a/variables.ipynb
+++ b/variables.ipynb
@@ -32,7 +32,8 @@
     "\n",
     "- Sklearn doesnt support strings as inputs to models\n",
     "- Highly cardinal variables may lead to overfitting \n",
-    "- Reducing cardinality may improve model performance"
+    "- Reducing cardinality may improve model performance\n",
+    "- Rare labels can cause overfitting and introduce noise\n"
    ]
   },
   {
