split and mpute

--- a/Missing_Data_Imputation.ipynb
+++ b/Missing_Data_Imputation.ipynb
@@ -1541,22 +1541,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Mean/Median Imputation"
+    "#### Mean/Median Imputation\n",
+    "\n",
+    "- <b>NOTE</b>: Imputation should be done over the training set, and then propagated to the test set. This means that the mean / median to be used to fill missing values both in train and test set, should be extracted from the train set only. And this is to avoid overfitting."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:12:01.549304Z",
+     "start_time": "2020-06-20T23:12:01.100251Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# to split the datasets\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:22:59.145533Z",
+     "start_time": "2020-06-20T23:22:59.115944Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 3)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/titanic.csv\", usecols=[\"age\", \"fare\", \"survived\"])\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:23:57.927920Z",
+     "start_time": "2020-06-20T23:23:57.921092Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survived    0.000000\n",
+       "age         0.198653\n",
+       "fare        0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:24:00.487233Z",
+     "start_time": "2020-06-20T23:24:00.481940Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survived    0.000000\n",
+       "age         0.198653\n",
+       "fare        0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:26:22.131872Z",
+     "start_time": "2020-06-20T23:26:22.123629Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((623, 2), (268, 2))"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    df[['age', 'fare']],  # predictors\n",
+    "    df['survived'],  # target\n",
+    "    test_size=0.3,  # percentage of obs in test set\n",
+    "    random_state=0)  # seed to ensure reproducibility\n",
+    "\n",
+    "x_train.shape, x_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:26:28.098294Z",
+     "start_time": "2020-06-20T23:26:28.091996Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age     0.194222\n",
+       "fare    0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:28:11.240046Z",
+     "start_time": "2020-06-20T23:28:11.237348Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def impute_na(df, feature, value):\n",
+    "    return df[variable].fillna(value)"
+   ]
   },
   {
    "cell_type": "code",
