define var for imputed features

--- a/Missing_Data_Imputation.ipynb
+++ b/Missing_Data_Imputation.ipynb
@@ -1645,11 +1645,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-20T23:26:22.131872Z",
-     "start_time": "2020-06-20T23:26:22.123629Z"
+     "end_time": "2020-06-20T23:35:00.738743Z",
+     "start_time": "2020-06-20T23:35:00.731493Z"
     }
    },
    "outputs": [
@@ -1659,7 +1659,7 @@
        "((623, 2), (268, 2))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,11 +1676,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-20T23:26:28.098294Z",
-     "start_time": "2020-06-20T23:26:28.091996Z"
+     "end_time": "2020-06-20T23:35:01.031844Z",
+     "start_time": "2020-06-20T23:35:01.026421Z"
     }
    },
    "outputs": [
@@ -1692,7 +1692,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1703,39 +1703,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-20T23:28:11.240046Z",
-     "start_time": "2020-06-20T23:28:11.237348Z"
+     "end_time": "2020-06-20T23:35:02.261211Z",
+     "start_time": "2020-06-20T23:35:02.258297Z"
     }
    },
    "outputs": [],
    "source": [
     "def impute_na(df, feature, value):\n",
-    "    return df[variable].fillna(value)"
+    "    return df[feature].fillna(value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 67,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:35:02.781439Z",
+     "start_time": "2020-06-20T23:35:02.776574Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29.915338645418327, 29.0)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__median = x_train.age.median()\n",
+    "__mean = x_train.age.mean()\n",
+    "__mean, __median"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 68,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:35:03.309046Z",
+     "start_time": "2020-06-20T23:35:03.290786Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>age_median</th>\n",
+       "      <th>age_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>857</th>\n",
+       "      <td>51.0</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>76.7292</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>46.9000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>77.2875</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.4583</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>29.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      age     fare  age_median  age_mean\n",
+       "857  51.0  26.5500        51.0      51.0\n",
+       "52   49.0  76.7292        49.0      49.0\n",
+       "386   1.0  46.9000         1.0       1.0\n",
+       "124  54.0  77.2875        54.0      54.0\n",
+       "578   NaN  14.4583        29.0      29.9"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# median imputation\n",
+    "x_train[\"age_median\"] = impute_na(x_train, \"age\", __median)\n",
+    "\n",
+    "# mean imputation\n",
+    "x_train[\"age_mean\"] = impute_na(x_train, \"age\", __mean)\n",
+    "\n",
+    "# since age has decimals, round it to one place\n",
+    "x_train[\"age_mean\"] = np.round(x_train[\"age_mean\"], 1)\n",
+    "x_train.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 69,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-20T23:35:53.075017Z",
+     "start_time": "2020-06-20T23:35:53.067989Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original variable variance:  210.4528692463678\n",
+      "Variance after median imputation:  169.64401397346103\n",
+      "Variance after mean imputation:  169.51269265508145\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can see a change in the variance after mean / median imputation\n",
+    "# this is expected, because the percentage of missing data is quite\n",
+    "# high in Age, ~20%\n",
+    "\n",
+    "print('Original variable variance: ', x_train['age'].var())\n",
+    "print('Variance after median imputation: ', x_train['age_median'].var())\n",
+    "print('Variance after mean imputation: ', x_train['age_mean'].var())"
+   ]
   },
   {
    "cell_type": "code",
