--- a/Missing_Data_Imputation_2.ipynb
+++ b/Missing_Data_Imputation_2.ipynb
@@ -27,11 +27,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Frequent Vale / Mode Imputation\n",
+    "\n",
+    "- Assumption: Data is missing completely at random (MCAR) and The missing observations, most likely look like the majority of the observations in the variable (aka, the mode)\n",
+    "\n",
+    "- **NOTE**: Imputation should be done over the training set, and then propagated to the test set. This means that the most frequent category has to be selected from the training set, and used to replace NA both in train and test sets."
+   ]
   },
   {
    "cell_type": "code",
