random sampling series

--- a/Missing_Data_Imputation_2.ipynb
+++ b/Missing_Data_Imputation_2.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T13:07:01.774627Z",
-     "start_time": "2020-06-22T13:07:01.452993Z"
+     "end_time": "2020-06-23T13:08:20.990589Z",
+     "start_time": "2020-06-23T13:08:19.277260Z"
     }
    },
    "outputs": [],
@@ -1212,29 +1212,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Random Sample Imputation"
+    "#### Random Sample Imputation\n",
+    "\n",
+    "- Assumption: Data is missing completely at random (MCAR)\n",
+    "- No more than 5% of the variable contains missing data\n",
+    "- Well suited for linear models as it does not distort the distribution, regardless of the % of NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-23T13:09:38.630966Z",
+     "start_time": "2020-06-23T13:09:38.616784Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "survived    0.000000\n",
+      "age         0.198653\n",
+      "fare        0.000000\n",
+      "dtype: float64\n",
+      "(623, 3) (268, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('data/titanic.csv', usecols=['age', 'fare', 'survived'])\n",
+    "print(data.isnull().mean())\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data,\n",
+    "    data.survived,\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-23T13:13:57.460509Z",
+     "start_time": "2020-06-23T13:13:57.448191Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# let's impute Age by random sampling both in\n",
+    "# train and test sets\n",
+    "\n",
+    "# create the new variable where NA will be imputed:\n",
+    "# make a copy from the original variable, with NA\n",
+    "x_train[\"age_imputed\"] = x_train[\"age\"].copy()\n",
+    "x_test[\"age_imputed\"] = x_test[\"age\"].copy()\n",
+    "\n",
+    "\n",
+    "# extract the random sample to fill the na:\n",
+    "# remember we do this always from the train set, and we use\n",
+    "# these to fill both train and test\n",
+    "random_sample_train = x_train[\"age\"].dropna().sample(\n",
+    "    n=x_train[\"age\"].isnull().sum(), random_state=0\n",
+    ")\n",
+    "random_sample_test = x_test[\"age\"].dropna().sample(\n",
+    "    n=x_test[\"age\"].isnull().sum(), random_state=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T15:45:43.883504Z",
+     "start_time": "2020-06-22T15:45:43.879857Z"
+    }
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# pandas needs to have the same index in order to merge datasets\n",
+    "random_sample_train.index = X_train[X_train['age'].isnull()].index\n",
+    "random_sample_test.index = X_test[X_test['age'].isnull()].index"
+   ]
   },
   {
    "cell_type": "code",
