preserving distribuion by kde plots

--- a/Missing_Data_Imputation_2.ipynb
+++ b/Missing_Data_Imputation_2.ipynb
@@ -2231,59 +2231,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:37:46.957057Z",
+     "start_time": "2020-06-24T13:37:46.940594Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 3) (438, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's load the dataset with a few columns for the demonstration\n",
+    "cols_to_use = ['BsmtQual', 'FireplaceQu', 'SalePrice']\n",
+    "\n",
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "\n",
+    "# let's inspect the percentage of missing values in each variable\n",
+    "data.isnull().mean().sort_values(ascending=True)\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data,\n",
+    "    data.SalePrice,\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:41:34.888841Z",
+     "start_time": "2020-06-24T13:41:34.871584Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# let's impute BsmtQual by random sampling both in\n",
+    "# train and test sets\n",
+    "\n",
+    "# create the new variable where NA will be imputed\n",
+    "# make a copy from the original variable, with NA\n",
+    "x_train['BsmtQual_imputed'] = x_train['BsmtQual'].copy()\n",
+    "x_test['BsmtQual_imputed'] = x_test['BsmtQual'].copy()\n",
+    "\n",
+    "# extract the random sample to fill the na:\n",
+    "# remember we do this always from the train set, and we use\n",
+    "# these to fill both train and test\n",
+    "random_sample_train = x_train['BsmtQual'].dropna().sample(\n",
+    "    n=x_train['BsmtQual'].isnull().sum(), \n",
+    "    random_state=0\n",
+    ")\n",
+    "\n",
+    "random_sample_test = x_train['BsmtQual'].dropna().sample(\n",
+    "    n=x_test['BsmtQual'].isnull().sum(), \n",
+    "    random_state=0\n",
+    ")\n",
+    "\n",
+    "# pandas needs to have the same index in order to merge datasets\n",
+    "random_sample_train.index = x_train[x_train['BsmtQual'].isnull()].index\n",
+    "random_sample_test.index = x_test[x_test['BsmtQual'].isnull()].index\n",
+    "\n",
+    "# replace the NA in the newly created variable\n",
+    "x_train.loc[x_train['BsmtQual'].isnull(), 'BsmtQual_imputed'] = random_sample_train\n",
+    "x_test.loc[x_test['BsmtQual'].isnull(), 'BsmtQual_imputed'] = random_sample_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:42:50.777869Z",
+     "start_time": "2020-06-24T13:42:50.760841Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# let's impute FireplaceQu by random sampling both in\n",
+    "# train and test sets\n",
+    "\n",
+    "# create the new variable where NA will be imputed\n",
+    "# make a copy from the original variable, with NA\n",
+    "x_train['FireplaceQu_imputed'] = x_train['FireplaceQu'].copy()\n",
+    "x_test['FireplaceQu_imputed'] = x_test['FireplaceQu'].copy()\n",
+    "\n",
+    "# extract the random sample to fill the na:\n",
+    "# remember we do this always from the train set, and we use\n",
+    "# these to fill both train and test\n",
+    "random_sample_train = x_train['FireplaceQu'].dropna().sample(\n",
+    "    n=x_train['FireplaceQu'].isnull().sum(), \n",
+    "    random_state=0\n",
+    ")\n",
+    "\n",
+    "random_sample_test = x_train['FireplaceQu'].dropna().sample(\n",
+    "    n=x_test['FireplaceQu'].isnull().sum(), \n",
+    "    random_state=0\n",
+    ")\n",
+    "\n",
+    "# pandas needs to have the same index in order to merge datasets\n",
+    "random_sample_train.index = x_train[x_train['FireplaceQu'].isnull()].index\n",
+    "random_sample_test.index = x_test[x_test['FireplaceQu'].isnull()].index\n",
+    "\n",
+    "# replace the NA in the newly created variable\n",
+    "x_train.loc[x_train['FireplaceQu'].isnull(), 'FireplaceQu_imputed'] = random_sample_train\n",
+    "x_test.loc[x_test['FireplaceQu'].isnull(), 'FireplaceQu_imputed'] = random_sample_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:43:02.342199Z",
+     "start_time": "2020-06-24T13:43:02.337454Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check that nulls were removed\n",
+    "x_train['FireplaceQu_imputed'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:43:16.958667Z",
+     "start_time": "2020-06-24T13:43:16.954309Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# and now let's evaluate the effect of the imputation on the distribution\n",
+    "# of the categories and the target within those categories\n",
+    "\n",
+    "# we used a similar function in the notebook of arbitrary value imputation\n",
+    "# for categorical variables\n",
+    "\n",
+    "def categorical_distribution(df, variable_original, variable_imputed):\n",
+    "\n",
+    "    tmp = pd.concat(\n",
+    "        [\n",
+    "            # percentage of observations per category, original variable\n",
+    "            df[variable_original].value_counts() / len(df[variable_original].dropna()),\n",
+    "\n",
+    "            # percentage of observations per category, imputed variable\n",
+    "            df[variable_imputed].value_counts() / len(df)\n",
+    "        ],\n",
+    "        axis=1)\n",
+    "\n",
+    "    # add column names\n",
+    "    tmp.columns = ['original', 'imputed']\n",
+    "\n",
+    "    return tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:43:26.566825Z",
+     "start_time": "2020-06-24T13:43:26.552725Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>original</th>\n",
+       "      <th>imputed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TA</th>\n",
+       "      <td>0.463928</td>\n",
+       "      <td>0.465753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gd</th>\n",
+       "      <td>0.430862</td>\n",
+       "      <td>0.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ex</th>\n",
+       "      <td>0.082164</td>\n",
+       "      <td>0.083170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fa</th>\n",
+       "      <td>0.023046</td>\n",
+       "      <td>0.022505</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    original   imputed\n",
+       "TA  0.463928  0.465753\n",
+       "Gd  0.430862  0.428571\n",
+       "Ex  0.082164  0.083170\n",
+       "Fa  0.023046  0.022505"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_distribution(x_train, 'BsmtQual', 'BsmtQual_imputed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-24T13:43:53.565028Z",
+     "start_time": "2020-06-24T13:43:53.553563Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>original</th>\n",
+       "      <th>imputed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Gd</th>\n",
+       "      <td>0.468750</td>\n",
+       "      <td>0.469667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TA</th>\n",
+       "      <td>0.420956</td>\n",
+       "      <td>0.420744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fa</th>\n",
+       "      <td>0.047794</td>\n",
+       "      <td>0.046967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ex</th>\n",
+       "      <td>0.033088</td>\n",
+       "      <td>0.032290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Po</th>\n",
+       "      <td>0.029412</td>\n",
+       "      <td>0.030333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    original   imputed\n",
+       "Gd  0.468750  0.469667\n",
+       "TA  0.420956  0.420744\n",
+       "Fa  0.047794  0.046967\n",
+       "Ex  0.033088  0.032290\n",
+       "Po  0.029412  0.030333"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# run the function in a categorical variable\n",
+    "categorical_distribution(x_train, 'FireplaceQu', 'FireplaceQu_imputed')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# now let's look at the distribution of the target within each\n",
+    "# variable category\n",
+    "\n",
+    "def kde_plot(df, feature, target):\n",
+    "    \n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    \n",
+    "    for category in df[feature].dropna().unique():\n",
+    "        df[df[feature]==category][target].plot(kind='kde', ax=ax)\n",
+    "    \n",
+    "    # add the legend\n",
+    "    lines, labels = ax.get_legend_handles_labels()\n",
+    "    labels = df[feature].dropna().unique()\n",
+    "    ax.legend(lines, labels, loc='best')\n",
+    "    \n",
+    "    plt.show();"
+   ]
   },
   {
    "cell_type": "code",
