--- a/Imputations_sklearn_1.ipynb
+++ b/Imputations_sklearn_1.ipynb
@@ -1516,11 +1516,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T13:01:36.597809Z",
-     "start_time": "2020-06-25T13:01:36.587510Z"
+     "end_time": "2020-06-25T13:11:15.653218Z",
+     "start_time": "2020-06-25T13:11:15.643072Z"
     }
    },
    "outputs": [
@@ -1546,7 +1546,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,11 +1565,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T13:02:29.219671Z",
-     "start_time": "2020-06-25T13:02:27.716968Z"
+     "end_time": "2020-06-25T13:11:19.349253Z",
+     "start_time": "2020-06-25T13:11:18.066400Z"
     }
    },
    "outputs": [
@@ -1596,11 +1596,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T13:09:37.862938Z",
-     "start_time": "2020-06-25T13:09:37.857441Z"
+     "end_time": "2020-06-25T13:11:21.240233Z",
+     "start_time": "2020-06-25T13:11:21.234651Z"
     }
    },
    "outputs": [],
@@ -1632,19 +1632,19 @@
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"imputer_LotFrontAge\", imputer_LotFrontAge, features_LotFrontAge),\n",
-    "        (\"features_MasVnrArea\", imputer_MasVnrArea, features_MasVnrArea),\n",
-    "        (\"features_GarageYrBlt\", imputer_GarageYrBlt, features_GarageYrBlt)\n",
+    "        (\"imputer_MasVnrArea\", imputer_MasVnrArea, features_MasVnrArea),\n",
+    "        (\"imputer_GarageYrBlt\", imputer_GarageYrBlt, features_GarageYrBlt)\n",
     "    ]\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T13:09:55.882564Z",
-     "start_time": "2020-06-25T13:09:55.857863Z"
+     "end_time": "2020-06-25T13:11:22.000038Z",
+     "start_time": "2020-06-25T13:11:21.976915Z"
     }
    },
    "outputs": [
@@ -1653,7 +1653,7 @@
       "text/plain": [
        "ColumnTransformer(n_jobs=None, remainder='drop', sparse_threshold=0.3,\n",
        "                  transformer_weights=None,\n",
-       "                  transformers=[('features_LotFrontAge',\n",
+       "                  transformers=[('imputer_LotFrontAge',\n",
        "                                 Pipeline(memory=None,\n",
        "                                          steps=[('imputer',\n",
        "                                                  SimpleImputer(add_indicator=False,\n",
@@ -1664,8 +1664,8 @@
        "                                                                verbose=0))],\n",
        "                                          verbose=False),\n",
        "                                 ['LotFrontage']),\n",
-       "                                ('features_MasVnrArea',\n",
-       "                                 Pipeline(memor...\n",
+       "                                ('imputer_MasVnrArea',\n",
+       "                                 Pipeline(memory=...\n",
        "                                                  SimpleImputer(add_indicator=False,\n",
        "                                                                copy=True,\n",
        "                                                                fill_value=-10,\n",
@@ -1674,7 +1674,7 @@
        "                                                                verbose=0))],\n",
        "                                          verbose=False),\n",
        "                                 ['MasVnrArea']),\n",
-       "                                ('features_GarageYrBlt',\n",
+       "                                ('imputer_GarageYrBlt',\n",
        "                                 Pipeline(memory=None,\n",
        "                                          steps=[('imputer',\n",
        "                                                  SimpleImputer(add_indicator=False,\n",
@@ -1688,7 +1688,7 @@
        "                  verbose=False)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,30 +1700,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T13:10:07.184613Z",
-     "start_time": "2020-06-25T13:10:07.177656Z"
+     "end_time": "2020-06-25T13:11:23.721086Z",
+     "start_time": "2020-06-25T13:11:23.713508Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('features_LotFrontAge', Pipeline(memory=None,\n",
+       "[('imputer_LotFrontAge', Pipeline(memory=None,\n",
        "           steps=[('imputer',\n",
        "                   SimpleImputer(add_indicator=False, copy=True, fill_value=999,\n",
        "                                 missing_values=nan, strategy='constant',\n",
        "                                 verbose=0))],\n",
        "           verbose=False), ['LotFrontage']),\n",
-       " ('features_MasVnrArea', Pipeline(memory=None,\n",
+       " ('imputer_MasVnrArea', Pipeline(memory=None,\n",
        "           steps=[('imputer',\n",
        "                   SimpleImputer(add_indicator=False, copy=True, fill_value=-10,\n",
        "                                 missing_values=nan, strategy='constant',\n",
        "                                 verbose=0))],\n",
        "           verbose=False), ['MasVnrArea']),\n",
-       " ('features_GarageYrBlt', Pipeline(memory=None,\n",
+       " ('imputer_GarageYrBlt', Pipeline(memory=None,\n",
        "           steps=[('imputer',\n",
        "                   SimpleImputer(add_indicator=False, copy=True, fill_value=1700,\n",
        "                                 missing_values=nan, strategy='constant',\n",
@@ -1731,7 +1731,7 @@
        "           verbose=False), ['GarageYrBlt'])]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,31 +1742,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T13:10:24.418790Z",
-     "start_time": "2020-06-25T13:10:24.409810Z"
+     "end_time": "2020-06-25T13:12:11.919694Z",
+     "start_time": "2020-06-25T13:12:11.915677Z"
     }
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'imputer_LotFrontAge'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-36543e911fe1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# for LotFrontAge\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mpreprocessor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_transformers_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'imputer_LotFrontAge'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'imputer'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatistics_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'imputer_LotFrontAge'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([999.])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# and we can look at the parameters learnt like this:\n",
-    "\n",
     "# for LotFrontAge\n",
     "preprocessor.named_transformers_['imputer_LotFrontAge'].named_steps['imputer'].statistics_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-25T13:12:12.278347Z",
+     "start_time": "2020-06-25T13:12:12.274300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-10.])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for MasVnrArea\n",
+    "preprocessor.named_transformers_['imputer_MasVnrArea'].named_steps['imputer'].statistics_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-25T13:12:53.729473Z",
+     "start_time": "2020-06-25T13:12:53.725656Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1700.])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for GarageYrBlt\n",
+    "preprocessor.named_transformers_['imputer_GarageYrBlt'].named_steps['imputer'].statistics_"
    ]
   },
   {
@@ -1774,21 +1824,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# and now we can impute the data\n",
+    "x_train = preprocessor.transform(X_train)\n",
+    "X_test = preprocessor.transform(X_test)\n",
+    "\n",
+    "X_train"
+   ]
   }
  ],
  "metadata": {
