sklearn mode impute

--- a/Imputations_sklearn_1.ipynb
+++ b/Imputations_sklearn_1.ipynb
@@ -1821,16 +1821,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-25T13:13:15.858499Z",
+     "start_time": "2020-06-25T13:13:15.843938Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 999.,  573., 1998.],\n",
+       "       [ 999.,    0., 1996.],\n",
+       "       [  50.,    0., 1700.],\n",
+       "       ...,\n",
+       "       [  68.,    0., 1978.],\n",
+       "       [ 999.,   18., 2003.],\n",
+       "       [  58.,   30., 1998.]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# and now we can impute the data\n",
+    "x_train = preprocessor.transform(x_train)\n",
+    "x_test = preprocessor.transform(x_test)\n",
+    "\n",
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-25T13:13:49.325366Z",
+     "start_time": "2020-06-25T13:13:49.316640Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>999.0</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>999.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LotFrontage  MasVnrArea  GarageYrBlt\n",
+       "0        999.0       573.0       1998.0\n",
+       "1        999.0         0.0       1996.0\n",
+       "2         50.0         0.0       1700.0\n",
+       "3         60.0         0.0       1939.0\n",
+       "4         60.0         0.0       1930.0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(\n",
+    "    x_train,\n",
+    "    columns=features_LotFrontAge + features_MasVnrArea + features_GarageYrBlt\n",
+    ").head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-25T13:14:02.136281Z",
+     "start_time": "2020-06-25T13:14:02.132789Z"
+    }
+   },
+   "source": [
+    "### Scikit-Learn Frequent Category Imputation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# and now we can impute the data\n",
-    "x_train = preprocessor.transform(X_train)\n",
-    "X_test = preprocessor.transform(X_test)\n",
+    "cols_to_use = [\n",
+    "    'BsmtQual', 'FireplaceQu', 'MSZoning',\n",
+    "   'BsmtUnfSF', 'LotFrontage', 'MasVnrArea',\n",
+    "   'Street', 'Alley', 'SalePrice'\n",
+    "]\n",
     "\n",
-    "X_train"
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "print(data.shape)\n",
+    "print(data.isnull().mean())\n",
+    "\n",
+    "# first let's remove the target from the features\n",
+    "cols_to_use.remove('SalePrice')\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use], # just the features\n",
+    "    data['SalePrice'], # the target\n",
+    "    test_size=0.3, # the percentage of obs in the test set\n",
+    "    random_state=0 # for reproducibility\n",
+    ") \n",
+    "print(x_train.shape, x_test.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
